--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,15 +7,19 @@ leftnav:
   name: Calendar
   url: /pages/calendar
   weight: 20
+- identifier: 31eaea8c-28c9-4bf8-8246-27860648feb2
+  name: Instructor Insights
+  url: /pages/instructor-insights
+  weight: 30
 - identifier: b0f9d280-11fb-aa5b-f65f-30f12ddc315b
   name: Readings
   url: /pages/readings
-  weight: 30
+  weight: 40
 - identifier: c78ef834-3e31-1e81-99a2-54d6d7d48544
   name: Video Lectures
   url: /video_galleries/video-lectures
-  weight: 40
+  weight: 50
 - identifier: a3e5e4c2-e038-520e-a30c-a4c71f000fe5
   name: Labs
   url: /pages/labs
-  weight: 50
+  weight: 60
